@@ -1,0 +1,21 @@
+Microsoft Visual Studio Solution File, Format Version 8.00
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "dsplib", "dsplib.vcproj", "{D7DEBB4E-C3B7-4F4A-9705-B813C0F340C8}"
+	ProjectSection(ProjectDependencies) = postProject
+	EndProjectSection
+EndProject
+Global
+	GlobalSection(SolutionConfiguration) = preSolution
+		Debug = Debug
+		Release = Release
+	EndGlobalSection
+	GlobalSection(ProjectConfiguration) = postSolution
+		{D7DEBB4E-C3B7-4F4A-9705-B813C0F340C8}.Debug.ActiveCfg = Debug|Win32
+		{D7DEBB4E-C3B7-4F4A-9705-B813C0F340C8}.Debug.Build.0 = Debug|Win32
+		{D7DEBB4E-C3B7-4F4A-9705-B813C0F340C8}.Release.ActiveCfg = Release|Win32
+		{D7DEBB4E-C3B7-4F4A-9705-B813C0F340C8}.Release.Build.0 = Release|Win32
+	EndGlobalSection
+	GlobalSection(ExtensibilityGlobals) = postSolution
+	EndGlobalSection
+	GlobalSection(ExtensibilityAddIns) = postSolution
+	EndGlobalSection
+EndGlobal
