@@ -1,3 +1,13 @@
+2008-06-15  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/BuzzMachineLoader.dll:
+	  Rebuild.
+
+	* src/dsplib/dsplib.cpp:
+	* src/dsplib/dsplib.sln:
+	* src/dsplib/dsplib.vcproj:
+	  Add projects files and tweak the build.
+
 2008-06-13  Stefan Kost  <ensonic@users.sf.net>
 
 	* src/dsplib/Makefile:
